modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -707,7 +707,7 @@
     }
    },
    "source": [
-    "Then, we can declare another Method designated to iterate through an given Integer Array Parameter, incrementing each Element by 1. "
+    "Then, we can declare another Method designated to iterate through the given Integer Array Parameter, incrementing each Element by 1. "
    ]
   },
   {
