modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -784,7 +784,7 @@
     }
    },
    "source": [
-    "So now let's suppose we have some Integer Array Argument that we have declared at the top-level:"
+    "So now let's suppose we have some **Integer Array Argument** that we have declared at the top-level:"
    ]
   },
   {
