modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -241,7 +241,9 @@
    "source": [
     "static void AddOne( int IntegerParameter )\n",
     "{ \n",
-    "    Console.WriteLine( $\"After adding 1 to { IntegerParameter }, we have:  { ++IntegerParameter }\" );\n",
+    "    Console.WriteLine( \n",
+    "        $\"After adding 1 to { IntegerParameter }, we have:  { ++IntegerParameter }\" \n",
+    "    );\n",
     "}"
    ]
   },
@@ -1255,11 +1257,187 @@
    "source": [
     "// PrintSomethingRepitiously is supposed to take a string argument followed by an int argument,\n",
     "// but what is the result if those happen to get switched?\n",
-    "\n",
     "PrintSomethingRepitiously( \n",
     "    10,\n",
     "    \"This Argument is in the int position, but is a string\" \n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Variable Number of Arguments (var-args)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now we will see how to declare Methods that allow the count of arguments to be different any time the method is invoked, so to meet the needs of the invoking code.    \n",
+    "   \n",
+    "Such Methods are often called Methods with a **variable number of arguments**.   \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Recall our previous example Method, `PrintIntegerArray`, which took an **Integer Array** as a Parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,2,3,4,5]"
+     ]
+    }
+   ],
+   "source": [
+    "// Print an inline representation of the Array given as an argument \n",
+    "PrintIntegerArray( \n",
+    "    new int[]{ 1, 2, 3, 4, 5 } \n",
+    ");"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We could alternatively invoke the Method with **var-args**.   \n",
+    "The difference is that the `parameters_list` is declared with the keyword `params` in the way shown below:   \n",
+    "   \n",
+    "$parameters\\_list = [type_1\\,\\,name_1 [,\\,\\,type_i\\,\\,name_i]],\\,\\,\\bf{params}\\,\\,\\,\\,var\\_type[\\,\\,]$   \n",
+    "$where\\,\\,i = 2, 3, \\dots$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static void AddOneToEachArrayElement(  params  int[] IntegerArrayParameter )\n",
+    "{\n",
+    "\n",
+    "    // Observe the First and Last Indices of the array,\n",
+    "    int FirstIndex = 0,\n",
+    "        LastIndex  = IntegerArrayParameter.Length - 1;\n",
+    "    \n",
+    "\n",
+    "    // Set up a Current Index initialized at the First Index\n",
+    "    int CurrentIndex = FirstIndex;\n",
+    "\n",
+    "\n",
+    "    // Iterating While the Current Index within the Integer Array given as a Parameter \n",
+    "    // is still within bound of the Array,\n",
+    "    while( CurrentIndex <= LastIndex )\n",
+    "    {\n",
+    "\n",
+    "        // Increment the Value of the Element at the Current Index by 1,\n",
+    "        // taking care to simultaneously increment the Current Index\n",
+    "        IntegerArrayParameter[ CurrentIndex++ ] += 1;\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // After all that,\n",
+    "    // Print the final state of the Integer Array  \n",
+    "    PrintIntegerArray( IntegerArrayParameter );\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2,3,4,5,6]"
+     ]
+    }
+   ],
+   "source": [
+    "// Having used the  params  keyword in the declaration \n",
+    "// enabled us to be able to pass any number of literals in as argument values\n",
+    "AddOneToEachArrayElement( 1, 2, 3, 4, 5 )"
    ]
   }
  ],
