modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -1365,6 +1365,57 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- **The last element from the list declaration** – `params`, is the one that allows passing of random count of arguments of type `var_type`, for each invocation of the method.  \n",
+    "   \n",
+    "- In the declaration of that element, before its type `var_type` we must add params: `params var_type[]`. \n",
+    "   \n",
+    "- The type `var_type` can be either **primitive** or by **reference**. \n",
+    "   \n",
+    "- Rules and special characteristics for the other elements from the method’s parameters list, that precede the **var-args** parameter `var_name`, are the same, as those we discussed in the section \"Method Parameters\"."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we convert the `AddOneToEachArrayElement()` Method we defined previously to accept a **variable number of arguments** using the `params` keyword:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -1439,6 +1490,18 @@
     "// enabled us to be able to pass any number of literals in as argument values\n",
     "AddOneToEachArrayElement( 1, 2, 3, 4, 5 )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
